--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html class="desktop mbr-site-loaded" style=""><head>
+<!DOCTYPE html>
+<html  >
+<head>
   <!-- Site made with Mobirise Website Builder v5.5.2, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&amp;display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -22,7 +24,7 @@
   
   
 </head>
-<body style="z-index: 0"><section id="top-1" style="display: none;"><a href="https://mobirise.in">Mobirise HTML Creator</a> Mobirise v5.5.2</section>
+<body>
   
   <section data-bs-version="5.1" class="content7 cid-sQtJsn8uE2" id="content7-l">
     
@@ -73,7 +75,7 @@
     <div class="container">
         <div class="row content-wrapper justify-content-center">
             <div class="col-lg-3 offset-lg-1 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2pbF6++sRs8Cu/7i/WdHwKdhXcvcTXxoxdqXwS9ov9hn3iXEvK/HP+Mn2UB6ZOayWBwegUbrCSb76hYDTmSEZzhtFXIlRqFoZPFkYZ12hoF8/BKXT8TKewCqbHvfp3qr">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3dDORsKY5d4wnf+M97rIqSUAWw87q0SFsV8d3PqwUDdYX/l/NepJ+qtsDUesIXriRDIP0bto35BlGtsGVT2GnEQxfa+VLwJ4B84kuuQupRbccknAQk6xy/J4CczC56Qu">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We will try to get back to you in 24 - 48 hours. It could take a maximum of 3 days to receive a response.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -123,8 +125,8 @@
             </div>
         </div>
     </div>
-</section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">mobirise.com</a> free maker</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
-
-<div style="all: initial;-webkit-user-select: none !important;-moz-user-select: none !important;-ms-user-select: none !important;user-select: none !important;cursor: default !important;margin: 0px !important;padding: 0px !important;border: 0px !important;overflow: visible !important;visibility: visible;display: block !important;position: fixed !important;float: none !important;clear: none !important;line-height: normal !important;z-index: 2147483647 !important;opacity: 1 !important;width: 0px !important;height: 0px !important;font-family: &quot;Segoe UI&quot;, &quot;Helvetica Neue&quot;, sans-serif !important;font-size: 15px !important;font-weight: normal !important;color: black !important;background-color: transparent !important;text-align: left !important;" id="werh345h6i1h4i3u4z-2860856115907442" class="werh345h6i1h4i3u4z"></div></body></html>
+</body>
+</html>
